--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -8,20 +8,24 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.kidvideo.MainActivity$PlaceholderFragment" >
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
-        android:layout_marginLeft="57dp"
-        android:layout_marginTop="14dp"
-        android:layout_toRightOf="@+id/textView1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="94dp"
+        android:text="Button" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/button1"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="26dp"
+        android:layout_toRightOf="@+id/button1"
         android:text="Button" />
 
 </RelativeLayout>
